AMBARI-24572 Fixing the cluster name alignment

--- a/ambari-web/app/styles/top-nav.less
+++ b/ambari-web/app/styles/top-nav.less
@@ -29,7 +29,7 @@
       padding: @navbar-header-vertical-padding @navbar-header-padding-right @navbar-header-vertical-padding @navbar-header-padding-left;
       margin-top: -5px;
       font-size: @navbar-header-font-size;
-      width: ~"calc(100% - 400px)";
+      width: ~"calc(100% - 440px)";
       a {
         color: #313D54;
         cursor: pointer;
@@ -50,7 +50,6 @@
     }
     .navbar-text.brand-wrapper {
       margin-top: 17px;
-      margin-left: -10px;
     }
     .navbar-text.brand-wrapper, .cluster-notifications {
       color: @top-nav-brand-color;
